plugins {
    id 'com.android.library'
}

android {
    compileSdk target_sdk

    defaultConfig {
        minSdk 26
        targetSdk target_sdk
        versionCode 2
        versionName "2.0.0"
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    implementation("org.jsoup:jsoup:1.16.1")
    implementation("com.fasterxml.jackson.core:jackson-core:2.15.2")
    implementation("com.fasterxml.jackson.core:jackson-databind:2.15.2")
}
